[gd_scene load_steps=2 format=3 uid="uid://c3nl2ur2fan6g"]

[ext_resource type="Script" path="res://ui/views/editor/components/node_inspector/node_inspector.gd" id="1_be0h7"]

[node name="NodeInspector" type="Control"]
clip_children = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_be0h7")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
clip_children = 1
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DefaultContent" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
unique_name_in_owner = true
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="InfoLabel" type="Label" parent="ScrollContainer/MarginContainer/DefaultContent"]
offset_right = 1280.0
offset_bottom = 720.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Select a node to display its local properties here. "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3
clip_text = true

[node name="Properties" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
offset_right = 1280.0
offset_bottom = 720.0

[node name="NameLabel" type="Label" parent="ScrollContainer/MarginContainer/Properties"]
unique_name_in_owner = true
offset_right = 1280.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 16
text = "[Node name]"

[node name="InputsLabel" type="Label" parent="ScrollContainer/MarginContainer/Properties"]
unique_name_in_owner = true
offset_top = 30.0
offset_right = 1280.0
offset_bottom = 56.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Inputs"

[node name="Inputs" type="VBoxContainer" parent="ScrollContainer/MarginContainer/Properties"]
unique_name_in_owner = true
offset_top = 60.0
offset_right = 1280.0
offset_bottom = 60.0
theme_override_constants/separation = 2

[node name="OutputsLabel" type="Label" parent="ScrollContainer/MarginContainer/Properties"]
unique_name_in_owner = true
offset_top = 64.0
offset_right = 1280.0
offset_bottom = 90.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Outputs"

[node name="Outputs" type="VBoxContainer" parent="ScrollContainer/MarginContainer/Properties"]
unique_name_in_owner = true
offset_top = 94.0
offset_right = 1280.0
offset_bottom = 94.0
theme_override_constants/separation = 2

[node name="ExtrasLabel" type="Label" parent="ScrollContainer/MarginContainer/Properties"]
unique_name_in_owner = true
offset_top = 98.0
offset_right = 1280.0
offset_bottom = 124.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Extras"

[node name="Extras" type="VBoxContainer" parent="ScrollContainer/MarginContainer/Properties"]
unique_name_in_owner = true
offset_left = 640.0
offset_top = 128.0
offset_right = 640.0
offset_bottom = 128.0
size_flags_horizontal = 4
theme_override_constants/separation = 2

[node name="DocumentationLabel" type="Label" parent="ScrollContainer/MarginContainer/Properties"]
unique_name_in_owner = true
offset_top = 132.0
offset_right = 1280.0
offset_bottom = 158.0
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Documentation"
